<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>CucumberLearning</groupId>
	<artifactId>CucumberLearning</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<junit.version>4.12</junit.version>
		<cucumber.core.version>1.2.5</cucumber.core.version>
		<cucumber.java.version>1.2.5</cucumber.java.version>
		<cucumber.junit.version>1.2.5</cucumber.junit.version>
		<cucumber.picocontainer.version>1.2.5</cucumber.picocontainer.version>
		<picocontainer.version>2.15</picocontainer.version>
		<gherkin.version>2.12.2</gherkin.version>
		<selenium.version>3.6.0</selenium.version>
		<!-- Set the compiler to use java 1.7 so that strings can be switch parameter -->
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<slf4j.version>1.7.7</slf4j.version>
		<mysql.version>5.1.38</mysql.version>
		<javalite.version>1.4.13</javalite.version>
	</properties>
	<dependencies>
		<!-- CUCUMBER -->
		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-core -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>${cucumber.core.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-java -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.java.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-jvm-deps -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-jvm-deps</artifactId>
			<version>1.0.5</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.junit.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- GHERKIN -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>gherkin</artifactId>
			<version>${gherkin.version}</version>
		</dependency>
		<!-- SELENIUM -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<!-- ENABLING THE SELENIUM SERVER WILL CAUSE THE SELECTOR ERROR IN JETTY -->
		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server -->
		<!-- <dependency> -->
		<!-- <groupId>org.seleniumhq.selenium</groupId> -->
		<!-- <artifactId>selenium-server</artifactId> -->
		<!-- <version>${selenium.version}</version> -->
		<!-- </dependency> -->

		<!-- JUNIT -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<!-- https://stackoverflow.com/questions/26975818/what-is-scope-under-dependency-in-pom-xml-for -->
			<scope>test</scope>
		</dependency>
		<!-- PICOCONTAINER (Dependency Injection for Cucumber) -->
		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-picocontainer -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-picocontainer</artifactId>
			<version>${cucumber.picocontainer.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.picocontainer/picocontainer -->
		<dependency>
			<groupId>org.picocontainer</groupId>
			<artifactId>picocontainer</artifactId>
			<version>${picocontainer.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- JETTY (web app) -->
		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-webapp -->
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-webapp</artifactId>
			<version>9.4.7.v20170914</version>
		</dependency>
		<!-- Required for use FileUtils to delete non-empty directory -->
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.5</version>
		</dependency>
		<!-- ActiveJDBC - Connect to relationa db -->
		<dependency>
			<groupId>org.javalite</groupId>
			<artifactId>activejdbc</artifactId>
			<version>${javalite.version}</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-nop</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

	</dependencies>
	<build>
		<!-- pluginManagement tag required to fix missing execution error -->
		<!-- https://stackoverflow.com/questions/6352208/how-to-solve-plugin-execution-not-covered-by-lifecycle-configuration-for-sprin -->
		<!-- <pluginManagement> -->
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.2</version>
				<configuration>
					<argLine>-Duser.language=en</argLine>
					<argLine>-Xmx1024m</argLine>
					<argLine>-XX:MaxPermSize=256m</argLine>
					<argLine>-Dfile.encoding=UTF-8</argLine>
					<useFile>false</useFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.javalite</groupId>
				<artifactId>activejdbc-instrumentation</artifactId>
				<version>1.4.13</version>
<!-- 				<configuration> -->
<!-- 					<outputDirectory>${basedir}/target/classes</outputDirectory> -->
<!-- 				</configuration> -->
				<executions>
					<execution>
						<phase>process-classes</phase>
						<goals>
							<goal>instrument</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- Liquibase - Database management -->
				<groupId>org.liquibase</groupId>
				<artifactId>liquibase-maven-plugin</artifactId>
				<!-- 3.0.5 -->
				<version>3.5.3</version>
				<configuration>
					<changeLogFile>cucumberBook/src/main/resources/bank_schema.xml</changeLogFile>
					<driver>com.mysql.jdbc.Driver</driver>
					<url>jdbc:mysql://localhost/bank</url>
					<username>teller</username>
					<password>password</password>
				</configuration>
				<executions>
					<execution>
						<phase>process-resources</phase>
						<goals>
							<goal>update</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<!-- </pluginManagement> -->
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.liquibase</groupId>
										<artifactId>
											liquibase-maven-plugin
										</artifactId>
										<versionRange>
											[3.5.3,)
										</versionRange>
										<goals>
											<goal>update</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
